hphp/hack/test/typecheck/reactive/await_in_rx1.php.coeffects.exp
File "await_in_rx1.php", line 12, characters 8-10:
Not immediately `await`ing `Awaitable`-typed values requires the capability AccessStaticVariable, which is not provided by the context. (Typing[4401])
  File "await_in_rx1.php", line 10, characters 20-21:
  The local (enclosing) context provides the capability set {Rx, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
