hphp/hack/test/typecheck/reactive/await_in_rx1.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

<<__Rx>>
async function f()[rx]: Awaitable<int> {
  return 1;
}

<<__Rx>>
async function g()[rx]: Awaitable<void> {
  // error
  $a = f();
  $b = await $a;
}
